Adding markers/static map for mine pages and allowing selection of specific map for the large map, resizing/centering on location.

--- a/modules/maps/client/views/map.html
+++ b/modules/maps/client/views/map.html
@@ -2,6 +2,7 @@
 
     <ui-gmap-google-map id='projects-map'
         center='map.center'
+        control='control'
         zoom='map.zoom'
         refresh='1'
         options='map.options'>
