--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -77,7 +77,7 @@
             </main>
             <aside class="col-lg-4">
                 <section>
-                    <div class="map-section"><div class="map-thumb">Map Thumbnail Here</div></div>
+                    <div class="map-section"><div class="map-thumb"><a href ui-sref="maps({project: project})"><img src="{{project.staticMap}}"/></div></a></div>
                     <ul class="mmti-side-list mine-details-list">
                         <li>
                             <span class="name">Operator</span>
