MEM-299: handle mulitple orgs/agencies per single Other Document.

--- a/modules/other-documents/client/views/list.html
+++ b/modules/other-documents/client/views/list.html
@@ -6,10 +6,6 @@
 				<span>Name</span>
 				<span class="sort-icon" ng-show="sorting.column === 'name'"></span>
 			</th>
-			<th class="sh-col agency sortable" ng-class="{'descending': !sorting.ascending}" ng-click="sortBy('agency')">
-				<span>Agency</span>
-				<span class="sort-icon" ng-show="sorting.column === 'agency'"></span>
-			</th>
 			<th class="sh-col type sortable" ng-class="{'descending': !sorting.ascending}" ng-click="sortBy('type')">
 				<span>Type</span>
 				<span class="sort-icon" ng-show="sorting.column === 'type'"></span>
@@ -18,14 +14,17 @@
 				<span>Date</span>
 				<span class="sort-icon" ng-show="sorting.column === 'date'"></span>
 			</th>
+			<th class="sh-col name">
+				<span></span>
+			</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr id="otherDocumentsList" role="tablist" aria-multiselectable="false" ng-repeat="doc in sortedList">
-			<td class="ah-col name"><a href="{{doc.link}}">{{doc.title}}</a></td>
-			<td class="ah-col agency">{{doc.agency.orgCode}}</td>
+			<td class="ah-col name"><a target="_blank" href="{{doc.link}}">{{doc.title}}</a></td>
 			<td class="ah-col type">{{doc.documentType}}</td>
 			<td class="ah-col date">{{doc.date | date:'MMM dd, yyyy'}}</td>
+			<td>{{doc.agenciesDisplay}}</td>
 		</tr>
 	</tbody>
 </table>
