--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -21,7 +21,7 @@
         <div class="site-intro container">
             <div class="row">
                 <div class="col-lg-8">
-                    <section class="about-info">
+                    <section class="about-info mb-0">
                         <h2>About BC Mine Information</h2>
                         <p>The Ministry of Energy and Mines (MEM), the Ministry of Environment (ENV) and the Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia more accessible than ever before.</p>
                         <p>This is the first time mine-related information from all three agencies has been made available online in one place, and more information will be added on an ongoing basis.</p>
