--- a/modules/projects/client/scss/projects.scss
+++ b/modules/projects/client/scss/projects.scss
@@ -5,6 +5,10 @@
     .summary {
         font-size: 0.875rem;
         font-style: italic;
+
+        p {
+            font-size: 0.875rem;
+        }
     }
 
     .ah-col {
