--- a/modules/core/client/scss/components/hero-banner.scss
+++ b/modules/core/client/scss/components/hero-banner.scss
@@ -17,6 +17,12 @@
     }
 }
 
+.hero-btn {
+    padding: 0.65rem 1rem;
+    font-size: 0.9375rem;
+    font-weight: 600;
+}
+
 @media (min-width: 760px) {
     .hero-banner {
         height: 30rem;
