--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,5 +1,5 @@
 
-<header id="header" ng-class="{'mapactive': isMapActive}">
+<header id="header">
 	<div class="brand-container">
 		<a class="brand" ui-sref="home" tabindex="0"></a>
 		<button class="navbar-toggler float-right collapsed" type="button" 
