--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -53,7 +53,13 @@
                                     id="collapse{{$index+1}}"
                                     aria-labelledby="heading{{$index+1}}">
                                     <div class="mmti-accord-body">
-                                        <span class="summary" ng-bind-html="content(p, 'OVERVIEW_INTRO_TEXT', 'MINES')"></span>
+                                        <div class="summary" ng-bind-html="content(p, 'OVERVIEW_INTRO_TEXT', 'MINES')"></div>
+                                        <!--
+                                        <div>
+                                            <a class="btn btn-sm btn-link" ui-sref="maps({project: p})"><span>Goto Mine Page</span></a>
+                                            <a class="btn btn-sm btn-link" ui-sref="maps({project: p})"><span>View on Map</span></a> 
+                                        </div>
+                                        -->
                                         <div class="mine-list-container">
                                             <div class="mmti-list-header">Details</div>
                                             <ul class="mmti-list nv-pair">
@@ -72,9 +78,6 @@
                                                 <li>
                                                     <span class="name">Number of Tailings Impoundments</span>
                                                     <span class="value">{{p.tailingsImpoundments}}</span>
-                                                </li>
-                                                <li>
-                                                    <span class="btn" href ui-sref="maps({project: p})"><i class="material-icons">map</i><span>View Map</span></span>
                                                 </li>
                                             </ul>
                                         </div>
