MEM-303: used subtitle from import on the mine page.

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -15,7 +15,7 @@
         <div class="row">
             <main class="col-lg-8">
                 <section>
-                    <h2>About {{project.name}}</h2>
+                    <h2 ng-bind-html="content(project, 'SUBTITLE', 'DETAILS')"></h2>
 
                     <ul class="nav nav-pills" role="tablist">
                         <li class="nav-item">
