--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -209,7 +209,8 @@
 				<a class="pull-right btn btn-link btn-xs" ng-if="period.periodType !== 'Public'"
 					x-role-chooser
 					x-context="project"
-					x-current="period.commenterRoles"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
+					x-current="period.commenterRoles"
+				    x-public="true"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
 				</a>
 			</div>
 			<ul class="list-group">
@@ -222,7 +223,8 @@
 				<a class="pull-right btn btn-link btn-xs"
 					x-role-chooser
 					x-context="project"
-					x-current="period.vettingRoles"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
+					x-current="period.vettingRoles"
+				    x-public="false"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
 				</a>
 			</div>
 			<ul class="list-group">
@@ -235,7 +237,8 @@
 				<a class=" pull-right btn btn-link btn-xs"
 					x-role-chooser
 					x-context="project"
-					x-current="period.classificationRoles"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
+					x-current="period.classificationRoles"
+				    x-public="false"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
 				</a>
 			</div>
 			<ul class="list-group">
