--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -20,7 +20,7 @@
 	<div class="tab-pane" ng-show="s.userView">
 		<div class="form-group select-permission">
 			<label class="control-label">Select User</label>
-			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.displayName for user in s.allUsers | orderBy"></select>
+			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.displayName for user in s.allUsers"></select>
       <button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
               x-user-search-chooser
               x-title="'Select Contacts'"
@@ -53,7 +53,7 @@
 	<div class="tab-pane" ng-show="!s.userView">
 		<div class="form-group select-permission">
 			<label class="control-label" for="role">Select Role</label>
-			<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles | orderBy"></select>
+			<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles"></select>
 			<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="form-group manage-permission no-margin">
