--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -6,7 +6,7 @@
             <div class="container-inner">
                 <div class="hb-txt">
                     <h1>Find Mines in British Columbia</h1>
-                    <p class="mb-2">The BC Mine Information website’s currently includes 15 major mine sites</p>
+                    <p class="mb-2">The BC Mine Information Website currently includes 15 major mine sites</p>
                 </div>
             </div>
         </div>
