--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -69,7 +69,9 @@ header {
             line-height: 1.2rem;
             border-top: 1px solid $mn-border-color;
             color: $mn-color;
+            text-transform: uppercase;
             font-size: $mn-font-size;
+            font-weight: 700;
             cursor: pointer;
         }
 
