--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -19,7 +19,7 @@
 
                     <ul class="nav nav-pills" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#overview" ng-click="page('DETAILS')">Mine Overview</a>
+                            <a class="nav-link active" data-toggle="tab" href="#overview" ng-click="page('DETAILS')">Mine Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#authorizations" ng-click="page('AUTHORIZATION')">Authorizations</a>
@@ -100,9 +100,9 @@
                 <section>
                     <h4>Site Activities</h4>
                     <ul class="sa-list">
-                        <li ng-repeat="act in project.activities | orderBy : act.order" class="{{statusClass(act)}}">
+                        <li ng-repeat="act in project.activities | orderBy : act.order" class="{{statusClass(act)}}" ng-class="{'na': !act.status}">
                             <span class="sa-name">{{act.name}}</span>
-                            <span class="sa-status">{{act.status}}</span>
+                            <span class="sa-status">{{act.status}}<span ng-if="!act.status">---</span>
                         </li>
                     </ul>
                 </section>
