--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -73,3 +73,61 @@
         }
     }
 }
+
+.gm-style-iw {
+   width: 25rem !important;
+   top: 0 !important;
+   left: 0 !important;
+   overflow: visible !important;
+   background-color: transparent;
+   box-shadow: none;
+   border: none;
+   border-radius: 2px 2px 0 0;
+
+   > div:first-child {
+       width: 100%;
+       overflow: visible !important;
+   }
+
+   .map-popup {
+       position: relative;
+       margin-bottom: -18px;
+       margin-right: -55px;
+       padding: 1.5rem;
+       border-radius: 4px;
+       background: #003366;
+       color: #FFF;
+
+       &:after {
+            position: absolute;
+            bottom: -28px;
+            left: 50%;
+            margin-left: -20px;
+            display: block;
+            width: 0;
+            height: 0;
+            border-left: 18px solid transparent;
+            border-right: 18px solid transparent;
+            border-top: 30px solid #003366;
+            content: ' ';
+       }
+
+       h3 {
+           margin-bottom: 1rem;
+       }
+
+       .map-popup-content {
+            p {
+                margin-bottom: 0;
+                line-height: 1.25rem;
+                font-size: 0.875rem;
+            }
+       }
+
+       .popup-btns {
+           margin-top: 1.5rem;
+       }
+
+
+   }
+}
