--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -79,21 +79,24 @@
    top: 0 !important;
    left: 0 !important;
    overflow: visible !important;
-   background-color: transparent;
    box-shadow: none;
+   background-color: transparent;
    border: none;
    border-radius: 2px 2px 0 0;
 
    > div:first-child {
+       display: block !important;
        width: 100%;
        overflow: visible !important;
    }
 
    .map-popup {
        position: relative;
+       height: 16.5rem;
        margin-bottom: -18px;
        margin-right: -55px;
        padding: 1.5rem;
+       box-shadow: 1rem 1rem 2rem #000;
        border-radius: 4px;
        background: #003366;
        color: #FFF;
