--- a/modules/projects/client/views/projects-partials/projects-map-window.html
+++ b/modules/projects/client/views/projects-partials/projects-map-window.html
@@ -1,11 +1,11 @@
 
-<div class="map-popup feature-block">
+<div class="map-popup">
 	<h3>{{ parameter.name }}</h3>
 	<div class="map-popup-content" 
 		ng-if="parameter.description" 
 		ng-bind-html="parameter.description">
 	</div>
-	<div>
-		<a class="btn inverted" href ui-sref="project({projectid: parameter.code })">View Project Details<i class="btn glyphicon glyphicon-circle-arrow-right"></i></a>
+	<div class="popup-btns">
+		<a class="btn slide-r-btn inverted" ui-sref="project({projectid: parameter.code })"><span>View Mine</span><i class="material-icons">arrow_forward</i></a>
 	<div>
 </div>
