MEM-308 - Authorizations Metadata Binding
- Added status column to authorizations UI
- Binded the values for documentType and documentStatus

- Fixed a small issue with the box-shadow on the map popup

--- a/modules/authorizations/client/scss/project-authorizations.scss
+++ b/modules/authorizations/client/scss/project-authorizations.scss
@@ -3,7 +3,6 @@
     .sh-col,
     .ah-col {
         &.date {
-            width: 7rem;
             text-align: right;
         }
     }
@@ -12,6 +11,23 @@
         &.name {
             padding-left: 0;
             font-weight: 400;
+        }
+        &.date {
+            white-space: nowrap;
+        }
+    }
+}
+
+@media (min-width: 760px) {
+    .auth-list {
+        .ah-col {
+            &.status {
+                width: 28%;
+            }
+
+            &.date {
+                width: 7.5rem;
+            }
         }
     }
 }
