--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -39,7 +39,7 @@
     left: 0;
     right: 0;
     z-index: 999;
-    box-shadow: 0 0 0.75rem rgba(#000, 0.5);
+    box-shadow: 0 0 0.75rem rgba(#000, 0.2);
 
     .action-bar {
         padding: 0.75rem 1rem;
@@ -96,7 +96,7 @@
        margin-bottom: -18px;
        margin-right: -55px;
        padding: 1.5rem;
-       box-shadow: 1rem 1rem 2rem #000;
+       box-shadow: 0.25rem 0.25rem 1rem rgba(#000, 0.5);
        border-radius: 4px;
        background: #003366;
        color: #FFF;
