Fixing sizing issue with map thumbnail

--- a/modules/core/client/scss/components/aside.scss
+++ b/modules/core/client/scss/components/aside.scss
@@ -88,6 +88,14 @@ aside {
     margin-bottom: 0;
     display: table;
     width: 100%;
+
+    a {
+        display: block;
+
+        img {
+            width: 100%;
+        }
+    }
 }
 
 .map-thumb {
