ESM-262: simplify getting overviewIntroText to the map UI.

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -4,7 +4,7 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>{{project.name}}</h1>
-                <p class="mb-2" ng-bind-html="content(project, 'OVERVIEW_INTRO_TEXT', 'MINES')"></p>
+                <p class="mb-2" ng-bind-html="project.overviewIntroText"></p>
             </div>
         </div>
     </div>
