--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -53,7 +53,7 @@
                                     id="collapse{{$index+1}}"
                                     aria-labelledby="heading{{$index+1}}">
                                     <div class="mmti-accord-body">
-                                        <div class="summary" ng-bind-html="content(p, 'OVERVIEW_INTRO_TEXT', 'MINES')"></div>
+                                        <div class="summary" ng-bind-html="p.overviewIntroText"></div>
                                         <!--
                                         <div>
                                             <a class="btn btn-sm btn-link" ui-sref="maps({project: p})"><span>Goto Mine Page</span></a>
