--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -6,7 +6,7 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Authorizations</h1>
-                <p>Major mines in British Columbia require authorizations from different federal and provincial agencies, and vary from project to project.</p>
+                <p>Major mines in British Columbia require authorizations from several different federal and provincial agencies. They can vary from project to project, but the three key authorizations for major mines in BC are environmental assessment certificates, Mines Act permits and Environmental Management Act permits.</p>
             </div>
         </div>
     </div>
