--- a/modules/core/client/scss/components/feature-block.scss
+++ b/modules/core/client/scss/components/feature-block.scss
@@ -19,6 +19,11 @@
         font-size: 0.875rem;
         line-height: 1.4rem;
     }
+
+    .btn {
+        font-size: 0.875rem;
+        font-weight: 600;
+    }
 }
 
 @media (min-width: 760px)
