--- a/modules/core/client/scss/components/mmti-accord.scss
+++ b/modules/core/client/scss/components/mmti-accord.scss
@@ -8,7 +8,7 @@
 
     &:nth-child(even) {
         .mmti-accord-header {
-            background: #f1f1f1;
+            background: #EEE;
         }
     }
 
