--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -15,7 +15,7 @@
         <main class="col-lg-8">
             <section>
                 <h2>Key Statutes and Regulations for Mining <span>in British Columbia</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Mining activities in British Columbia are subject to a variety of different provincial and federal regulations. The main pieces of legislation that govern major mines in BC are the Environmental Assessment Act, the Mines Act and the Environmental Management Act. You can learn more about these acts and others below.</p>
             </section>
             <section>
                 <h3>Provincial Statutes</h3>
@@ -106,7 +106,6 @@
                         <li><a href="http://www.bclaws.ca/civix/document/id/consol19/consol19/00_01009_01" target="_blank">Drinking Water Protection Act<i class="material-icons">open_in_new</i></a></li>
                         <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96117_01" target="_blank">Environment and Land Use Act<i class="material-icons">open_in_new</i></a></li>
                         <li><a href="http://www.bclaws.ca/civix/document/id/consol20/consol20/00_08028_01" target="_blank">Public Health Act<i class="material-icons">open_in_new</i></a></li>
-                        <li><a href="" target="_blank">Riparian Areas Protection Act<i class="material-icons">open_in_new</i></a></li>
                         <li><a href="http://www2.gov.bc.ca/gov/content/environment/air-land-water/water/laws-rules/water-sustainability-act" target="_blank">Water Users’ Communities Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
                 </section>
