--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -156,12 +156,8 @@ header {
     }
 
     .brand {
-        margin-top: 2px;
-        margin-left: 2px;
-        width: 380px; // Using PX dimensions here to ensure exact match to image
-        height: 60px;
-        background-image: url("/modules/core/client/images/bcgov-logo-horiz-LG.png");
-        background-size: auto;
+        margin-top: 0.7rem;
+        margin-left: 0.7rem;
     }
 
     .main-nav {
@@ -224,5 +220,16 @@ header {
                 display: none;
             }
         }
+    }
+}
+
+@media (min-width: 1200px) {
+    .brand {
+        margin-top: 2px;
+        margin-left: 2px;
+        width: 380px; // Using PX dimensions here to ensure exact match to image
+        height: 60px;
+        background-image: url("/modules/core/client/images/bcgov-logo-horiz-LG.png");
+        background-size: auto;
     }
 }
