--- a/modules/topics/client/views/reclamation-and-securities.html
+++ b/modules/topics/client/views/reclamation-and-securities.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="container-inner">
             <div class="hb-txt">
-                <h1>Reclamation &amp; Securities</h1>
+                <h1>Reclamation</h1>
                 <p>British Columbia was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites.</p>
                 <div class="hb-btns">
                     <a class="btn slide-r-btn hero-btn inverted" href="#anchor-point" du-smooth-scroll offset="65"><span>Read More</span><i class="material-icons">arrow_downward</i></a>
