MEM-262 - Ad-hoc edits
- Content changes as per stakeholder request.

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -33,7 +33,7 @@
 						</a>
 						<a class="dropdown-item" ui-sref="projects">
 							<strong>Find Mines in BC</strong>
-							<span class="dd-item-desc">The BC Mine Information website’s interactive map currently includes 10 mine sites.</span></a>
+							<span class="dd-item-desc">The BC Mine Information website’s interactive map currently includes 15 mine sites.</span></a>
 					</div>
 				</li>
 				<li class="nav-item dropdown">
@@ -45,7 +45,7 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
 						<a class="dropdown-item" ui-sref="legislation">
 							<strong>Legislation</strong>
-							<span class="dd-item-desc">Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia.</span></a>
+							<span class="dd-item-desc">Learn about the key statutes and regulations that apply to mining activities in British Columbia.</span></a>
 						<a class="dropdown-item" ui-sref="authorizations">
 							<strong>Authorizations</strong>
 							<span class="dd-item-desc">Environmental assessment certificates and permits issued under the Mines Act and Environmental Management Act.</span></a>
