--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -99,7 +99,7 @@
                 <div class="col-md-4">
                     <div class="feature-block">
                         <h3>Legislation</h3>
-                        <p>Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia</p>
+                        <p>Learn about the key statutes and regulations that apply to mining activities in British Columbia.</p>
                         <a class="btn inverted" ui-sref="legislation">Learn More</a>
                     </div>
                 </div>
