--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -15,7 +15,7 @@
         <main class="col-lg-8">
             <section>
                 <h2>Key Statutes and Regulations for Mining <span>in British Columbia</span></h2>
-                <p>Mining activities in British Columbia are subject to a variety of different provincial and federal regulations. The main pieces of legislation that govern major mines in BC are the Environmental Assessment Act, the Mines Act and the Environmental Management Act. You can learn more about these acts and others below.</p>
+                <p>Mining activities in British Columbia are subject to a variety of different provincial and federal regulations. The main pieces of legislation that govern major mines in BC are the Environmental Assessment Act, the Mines Act and the Environmental Management Act. You can learn more about these acts and others below. Please note that this is not meant to be an exhaustive list of all regulations that apply to mining activities.</p>
             </section>
             <section>
                 <h3>Provincial Statutes</h3>
