--- a/modules/core/client/scss/components/aside.scss
+++ b/modules/core/client/scss/components/aside.scss
@@ -62,6 +62,13 @@ aside {
         margin-top: 1.25rem;
         margin-bottom: 1.5rem;
     }
+
+    .mmti-list {
+        li {
+            border-top: none;
+            background: #f7f8fa;
+        }
+    }
 }
 
 @media (min-width: 760px) {
