--- a/modules/core/client/scss/components/mmti-list.scss
+++ b/modules/core/client/scss/components/mmti-list.scss
@@ -8,9 +8,13 @@
         @include clearfix();
         margin-top: 1px;
         padding: 0.6rem 0.75rem;
-        background: #f7f8fa;
         font-size: 0.875rem;
         line-height: 1.3rem;
+        border-top: 1px solid #DDD;
+
+        &:first-child {
+            border-top: none;
+        }
     }
 
     &.nv-pair {
