--- a/modules/inspections/client/views/project-inspections.html
+++ b/modules/inspections/client/views/project-inspections.html
@@ -1,6 +1,6 @@
 
 <section>
-    <h3>Compliance Oversight <span>January 1 - December 31, 2016</span></h3>
+    <h3>Inspections <span>January 1 - December 31, 2016</span></h3>
     <!--
     <div class="ce-list-header">Viewing {{complianceList.data.length}} Records</div>
     -->
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="mmti-accord" id="complianceList" role="tablist" aria-multiselectable="false">
-            <div class="mmti-accord-item" ng-repeat="c in sortedList | orderBy: 'date'">
+            <div class="mmti-accord-item" ng-repeat="c in sortedList | orderBy: '-inspectionDate'">
                 <div class="mmti-accord-header" role="tab" id="heading-{{c._id}}">
                     <div>
                         <a class="toggle collapsed" data-toggle="collapse" href="#collapse-{{c._id}}" aria-expanded="true"
