--- a/modules/projects/client/views/projects-partials/projects-map-window.html
+++ b/modules/projects/client/views/projects-partials/projects-map-window.html
@@ -1,11 +1,10 @@
 
-<div class="map-popup">
-	<h3>{{ parameter.name }}</h3>
-	<div class="map-popup-content" 
-		ng-if="parameter.overviewIntroText"
-		ng-bind-html="parameter.overviewIntroText">
+<div class="map-popup-content">
+	<div class="popup-title-container">
+		<h3>{{ parameter.name }}</h3>
 	</div>
-	<div class="popup-btns">
+	<div class="popup-detail-container" ng-if="parameter.overviewIntroText" ng-bind-html="parameter.overviewIntroText"></div>
+	<div class="popup-btn-container">
 		<a class="btn slide-r-btn inverted" ui-sref="project({projectid: parameter.code })"><span>View Mine</span><i class="material-icons">arrow_forward</i></a>
 	<div>
 </div>
