MEM-262 - Ad-hoc Edits

--- a/modules/topics/client/views/water-quality.html
+++ b/modules/topics/client/views/water-quality.html
@@ -38,7 +38,7 @@
                 <h4>External Links &amp; Resources</h4>
                 <ul class="mmti-side-list">
                     <li><a href="http://www2.gov.bc.ca/gov/content/environment/air-land-water/water/water-quality" target="_blank">Water Quality (Province of BC)</a></i>
-                    <li><a href="http://www.teck.com/responsibility/our-sustainability-strategy/water/" target="_blank">Water (Teck) </a></i>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/industrial-waste/mining-smelting/teck-area-based-management-plan" target="_blank">Elk Valley Area Based Management Plan</a></i>
                     <li><a href="http://www.teck.com/responsibility/our-sustainability-strategy/water/water-quality-in-the-elk-valley/" target="_blank">Water Quality in the Elk Valley (Teck) </a></i>
                 </ul>
             </section>
