--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -1,5 +1,7 @@
 
 .map-container {
+    @include flex-box();
+    @include flex-direction(column);
     position: absolute;
     top: 0;
     right: 0;
@@ -9,9 +11,12 @@
     z-index: 9999;
 
     ui-gmap-google-map {
-        position: absolute;
-        width: 100%;
-        height: 100%;
+        @include flex(1 1 auto);
+        position: relative;
+
+        .angular-google-map {
+            position: absolute;
+        }
 
         .angular-google-map,
         .angular-google-map-container {
@@ -34,12 +39,8 @@
 }
 
 .map-header-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    box-shadow: 0 0 0.75rem rgba(#000, 0.2);
+    @include flex(0 0 auto);
+    border-bottom: 3px solid $gold;
 
     .action-bar {
         padding: 0.75rem 1rem;
